<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <Button
        android:id="@+id/buttonViderPanier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="464dp"
        android:text="@string/btnViderPanier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSupprimerArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="30dp"
        android:text="@string/btnSupprimerArticle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConfirmerAchat"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="156dp"
        android:text="@string/btnConfirmerAchat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewPanier"
        android:layout_width="406dp"
        android:layout_height="254dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/contenu_de_la_scrollview_pour_le_panier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <TableLayout
            android:id="@+id/panierId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </TableLayout>
    </ScrollView>

    <EditText
        android:id="@+id/editTextTextMontantTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/montantTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewPanier" />

    <TextView
        android:id="@+id/textViewMontantTotal"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="54dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewPanier" />

    <Button
        android:id="@+id/buttonGoToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:text="@string/gotomain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>